--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,14 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+
 }
 body{
   background-color: var(--bg-color);
   font-size: 14px;
   font-family: sans-serif;
+  max-width: 425px;
+  margin: 0 auto;
 }
 * {
   color: var(--font-color);
