--- a/css/home.css
+++ b/css/home.css
@@ -14,7 +14,7 @@ header .head .logo {
   font-size: 1.5em;
 }
 header .head .like-direct > i {
-  font-size: 1.5em;
+  font-size: 1.7em;
   margin-left: 20px;
 }
 
@@ -31,7 +31,6 @@ header .head .like-direct > i {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* margin-left:10px; */
   padding: 5px;
   gap: 5px;
 }
@@ -88,9 +87,8 @@ header .head .like-direct > i {
     #4f5bd5
   );
 }
-
 main .posts-container {
-  padding-bottom: 60px;
+  /* padding-bottom: 60px; */
 }
 main .posts-container .post-item {
   margin-bottom: 20px;
@@ -100,7 +98,7 @@ main .posts-container .post-item .post-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 10px;
+  padding: 0 15px 0 10px;
 }
 
 main .posts-container .post-item .post-header .profile > .profile-container {
@@ -127,9 +125,10 @@ main .posts-container .post-item .post-footer .like-comment-save {
   display: flex;
   align-items: center;
   gap: 10px;
+  padding: 0 5px;
 }
 main .posts-container .post-item .post-footer .like-comment-save > i {
-  font-size: 1.5em;
+  font-size: 1.7em;
 }
 main
   .posts-container
@@ -166,19 +165,23 @@ main .posts-container .post-item .post-footer .discription > p > span {
 footer {
   bottom: 0;
   background-color: var(--bg-color);
-  width: 425px;
+  width: 426px;
   height: 60px;
   position: fixed;
   display: flex;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%);
   align-items: center;
   justify-content: space-between;
-  padding: 0 10px;
+  padding: 0 15px;
   padding-bottom: 15px;
   border-top: 1px solid #eee;
 }
 footer i {
-  font-size: 1.5em;
+  font-size: 1.7em;
 }
 footer .profile-container {
   width: 40px;
+  height: 40px;
 }
