--- a/css/home.css
+++ b/css/home.css
@@ -49,12 +49,7 @@ header .head .like-direct > i {
   width: 96%;
   border: 5px solid var(--bg-color);
 }
-.owl-carousel .owl-item {
-  display: flex;
-  width: max-content !important;
-  align-items: center;
-  justify-content: center;
-}
+
 .owl-carousel .owl-item img {
   display: block;
   width: 92%;
@@ -86,6 +81,9 @@ header .head .like-direct > i {
     #962fbf,
     #4f5bd5
   );
+}
+main {
+  position: relative;
 }
 main .posts-container {
   /* padding-bottom: 60px; */
@@ -165,13 +163,12 @@ main .posts-container .post-item .post-footer .discription > p > span {
 footer {
   bottom: 0;
   background-color: var(--bg-color);
-  width: 426px;
+  width: 100%;
   height: 60px;
-  position: fixed;
+  position: sticky;
   display: flex;
   bottom: 0;
-  left: 50%;
-  transform: translate(-50%);
+  left: 0;
   align-items: center;
   justify-content: space-between;
   padding: 0 15px;
