--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,6 @@ html,
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
-  padding: 0;
 
 }
 body{
@@ -22,7 +20,8 @@ body{
 * {
   color: var(--font-color);
   box-sizing: border-box;
-
+  margin: 0;
+padding: 0;
 }
 
 img{
@@ -35,4 +34,8 @@ a{
 @font-face {
   font-family: Billabong;
   src: url(../fonts/Billabong.ttf);
+}
+
+i {
+  font-size: 1.7em;
 }
