--- a/css/profile.css
+++ b/css/profile.css
@@ -25,6 +25,109 @@
    height: 100%;
   }
 
+  header .settings{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 15px ;
+    margin-top: 10px;
+  }
+header  .settings i{
+ cursor: pointer;
+}
+.profile-follow{
+display: flex;
+justify-content: space-between;
+align-items: flex-start;
+padding: 0 15px;
+margin-bottom: 50px;
+}
+
+.profile{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 5px;
+  gap: 5px;
+}
+.profile > span {
+  text-align: center;
+  display: block;
+  font-size: 1em;
+  font-weight: bold;
+}
+.profile > i {
+  text-align: center;
+  position: absolute !important;
+  color: white;
+  width: 25px;
+  height: 25px;
+  line-height: 20px;
+  border: 3px solid white;
+  background-color: rgb(22, 92, 243);
+  border-radius: 50%;
+  right: 10px;
+  bottom: 55px;
+  font-size: 1em;
+}
+
+.follow{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 40px;
+}
+.follow .item{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 30px;
+}
+.follow .item span:first-child{
+  font-weight: bolder;
+}
+
+.buttons{
+  display: flex;
+  gap: 5px;
+  padding: 0 15px;
+  margin-bottom: 30px;
+}
+.buttons button{
+  background-color: var(--input-color);
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  padding: 8px 0;
+  cursor: pointer;
+}
+.buttons button:nth-of-type(1){
+  flex: 3;
+}
+.buttons button:nth-of-type(2){
+  flex: 3;
+}
+.buttons button:nth-of-type(3){
+ padding: 8px;
+}
+.buttons button:nth-of-type(3) i{
+font-size: 1em;
+}
+
+.post-menu{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 35px;
+  border-bottom: 1px solid #ddd;
+}
+.post-menu i{
+ border-bottom: 2px solid var(--font-color);
+ padding: 10px 20px;
+}
+
 footer {
     bottom: 0;
     background-color: var(--bg-color);
@@ -40,10 +143,8 @@ footer {
     padding-bottom: 15px;
     border-top: 1px solid #eee;
   }
-  footer i {
-    font-size: 1.7em;
-  }
+ 
   footer .profile-container {
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
   }
