--- a/css/explorer.css
+++ b/css/explorer.css
@@ -13,56 +13,54 @@
   border: 5px solid var(--bg-color);
 }
 
-.search-container{
+.search-container {
   margin: 10px 15px;
   padding: 8px 20px;
   background-color: var(--input-color);
   border-radius: 10px;
 }
-.search-container input{
+.search-container input {
   border: none;
   outline: none;
   background-color: transparent;
 }
-.search-container i{
- color: #555;
- font-size: 1em;
+.search-container i {
+  color: #555;
+  font-size: 1em;
 }
 
-.posts-container{
+.posts-container {
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 2px;
 }
-.item{
 
-}
-.item img{
- height: 100%;
+.item img {
+  height: 100%;
+  border-radius: 5px;
 }
 
-.big{
+.big {
   grid-column: auto/span 1;
   grid-row: auto/span 2;
 }
 
 footer {
-    bottom: 0;
-    background-color: var(--bg-color);
-    width: 100%;
-    height: 60px;
-    position: sticky;
-    display: flex;
-    bottom: 0;
-    left: 0;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 15px;
-    padding-bottom: 15px;
-    border-top: 1px solid #eee;
-  }
-  footer .profile-container {
-    width: 40px;
-    height: 40px;
-  }
-  
+  bottom: 0;
+  background-color: var(--bg-color);
+  width: 100%;
+  height: 60px;
+  position: sticky;
+  display: flex;
+  bottom: 0;
+  left: 0;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 15px;
+  padding-bottom: 15px;
+  border-top: 1px solid #eee;
+}
+footer .profile-container {
+  width: 40px;
+  height: 40px;
+}
