--- a/css/home.css
+++ b/css/home.css
@@ -66,7 +66,7 @@ header .head .like-direct > i {
   width: 25px;
   height: 25px;
   line-height: 20px;
-  border: 3px solid white;
+  border: 3px solid var(--bg-color);
   background-color: rgb(22, 92, 243);
   border-radius: 50%;
   right: 5px;
@@ -178,7 +178,6 @@ main .posts-container .post-item .post-footer .discription > p > span {
 
 footer {
   bottom: 0;
-  background-color: var(--bg-color);
   width: 100%;
   height: 60px;
   position: sticky;
