--- a/css/main.css
+++ b/css/main.css
@@ -11,18 +11,19 @@ body {
   height: 100%;
 }
 body {
-  background-color: var(--bg-color);
   font-size: 12px;
   font-family: sans-serif;
   max-width: 425px;
   margin: 0 auto;
 }
 * {
+  background-color: var(--bg-color);
   color: var(--font-color);
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
+
 
 img {
   width: 100%;
@@ -39,4 +40,5 @@ a {
 i {
   font-size: 2em;
   cursor: pointer;
+  background-color: transparent;
 }
