--- a/css/profile.css
+++ b/css/profile.css
@@ -129,7 +129,6 @@ font-size: 1em;
 
 footer {
     bottom: 0;
-    background-color: var(--bg-color);
     width: 100%;
     height: 60px;
     position: sticky;
@@ -144,6 +143,11 @@ footer {
   }
  
   footer .profile-container {
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
+    
+  }
+  footer .profile-container img {
+    border: 2px solid white;
+    
   }
