--- a/css/explorer.css
+++ b/css/explorer.css
@@ -58,6 +58,7 @@ footer {
   padding: 0 15px;
   padding-bottom: 15px;
   border-top: 1px solid #eee;
+  background-color: var(--bg-color);
 }
 footer .profile-container {
   width: 40px;
