--- a/css/profile.css
+++ b/css/profile.css
@@ -140,6 +140,7 @@ footer {
     padding: 0 15px;
     padding-bottom: 15px;
     border-top: 1px solid #eee;
+  background-color: var(--bg-color);
   }
  
   footer .profile-container {
