--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ footer {
   justify-content: space-between;
   padding: 0 15px;
   padding-bottom: 15px;
-  border-top: 1px solid #eee;
+  border-top: 1px solid var(--input-color);
   background-color: var(--bg-color);
 }
 
@@ -64,4 +64,10 @@ footer .profile-container {
 }
 footer .profile-container img{
   border: 0.1rem solid white;
+}
+
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
